--- a/DrinkOrderSystem/DrinkOrderSystem/ServerSide/ServerSide.Master
+++ b/DrinkOrderSystem/DrinkOrderSystem/ServerSide/ServerSide.Master
@@ -13,6 +13,7 @@
     <script src="/bootstrap/js/bootstrap.js"></script>
     <%--<script src="../../bootstrap/js/bootstrap.js"></script>--%>
     <style>
+        
         #d4{
             /* fixed鎖定，固定位置，以視窗的內容區域左上角為基準，來指定絕對位置，。所以捲動時也會保持在設定位置 */
             /* right:貼在右下 */
@@ -37,6 +38,11 @@
             }
         }
      
+        .auto-style1 {
+            left: 10px;
+            top: 89px;
+        }
+     
     </style>
 
     <asp:ContentPlaceHolder ID="head" runat="server">
@@ -45,11 +51,11 @@
 
 
 </head>
-<body>
+<body style="background-color:slategrey">
     <form id="form1" runat="server">
-        <div class="container">
+        <div id="divbase" class="container">
              <!-- 漢堡選單 -->
-            <nav class="navbar navbar-expand-md navbar-light bg-light">
+            <nav class="auto-style1">
                 <a class="navbar navbar-brand">
                     <asp:Image ID="Image1" runat="server" ImageUrl="~/ServerSide/ImagesServer/drink_icon.png"  Width="50" Height="50"/>
                     公司名稱
@@ -63,7 +69,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="UserPage.aspx">使用者介面</a>
+                            <a class="nav-link active" aria-current="page" href="SystemAdmin/UserPage.aspx">使用者介面</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="UserRecords.aspx">個人訂購歷史清單</a>
