--- a/DrinkOrderSystem/DrinkOrderSystem/ServerSide/ServerSide.Master
+++ b/DrinkOrderSystem/DrinkOrderSystem/ServerSide/ServerSide.Master
@@ -14,22 +14,22 @@
     <%--<script src="../../bootstrap/js/bootstrap.js"></script>--%>
     <style>
         
-        #d4{
+        /*#d4{*/
             /* fixed鎖定，固定位置，以視窗的內容區域左上角為基準，來指定絕對位置，。所以捲動時也會保持在設定位置 */
             /* right:貼在右下 */
-            position: fixed;         
+            /*position: fixed;         
             left: -50px;
             bottom: 0px;
-        }
+        }*/
         /* 加冒號：虛擬選擇器 */
         /* hover游標移上去會呈現的 */
-        #d4:hover{
+        /*#d4:hover{*/
             /* right: 0px; */
-            animation-name: oxxo;
+            /*animation-name: oxxo;
             animation-duration: 1.5s;
-        }
+        }*/
         /* keyframes關鍵影格概念 */
-        @keyframes oxxo{
+        /*@keyframes oxxo{
             from{
                 left: -50px;
             }
@@ -41,7 +41,7 @@
         .auto-style1 {
             left: 10px;
             top: 89px;
-        }
+        }*/
      
     </style>
 
