--- a/DrinkOrderSystem/DrinkOrderSystem/ServerSide/ServerSide.Master
+++ b/DrinkOrderSystem/DrinkOrderSystem/ServerSide/ServerSide.Master
@@ -27,6 +27,11 @@
 
         <asp:Button ID="btnLogut" runat="server" Text="登出" OnClick="btnLogut_Click" />
 
+        <asp:Label ID="lbTopMsg" runat="server" Text="歡迎回來~!"></asp:Label>
+<%--        <asp:Timer ID="timerTop" runat="server" Enabled="true" Interval="100" OnTick="timerTop_Tick">          
+        </asp:Timer>--%>
+
+
         <div id="divbase" class="container">
              <!-- 漢堡選單 -->
             <nav class="auto-style1">
