--- a/DrinkOrderSystem/DrinkOrderSystem/ClientSide/ClientSide.Master
+++ b/DrinkOrderSystem/DrinkOrderSystem/ClientSide/ClientSide.Master
@@ -10,6 +10,9 @@
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.js"></script>
 
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+
     <style>
 body {
   background-image: url('ImagesClient/BG.png');
