--- a/DrinkOrderSystem/DrinkOrderSystem/ServerSide/ServerSide.Master
+++ b/DrinkOrderSystem/DrinkOrderSystem/ServerSide/ServerSide.Master
@@ -41,8 +41,8 @@
     <form id="form1" runat="server">
                 <div class="container">
         <div class="row">
-        <asp:Button ID="Button1" class="btn btn-primary" runat="server" />
-<div class="row"><img src="../ImagesServer/HappyDrink.png"  height="200"  /></div>
+        <asp:Button ID="Button1" class="btn btn-primary" runat="server" height="10"  />
+<h4><asp:Label ID="lbTopMsg" runat="server" Text="歡迎回來~!"></asp:Label></h4>
   
         
         <div>
@@ -56,7 +56,7 @@
                             
             </asp:ContentPlaceHolder> 
                         
-                        <h4><asp:Label ID="lbTopMsg" runat="server" Text="歡迎回來~!"></asp:Label></h4>
+                        
 
                     </td>
                 </tr>
@@ -78,7 +78,7 @@
                         </div>
                     </td>
 
-                    <td width="1200">
+                    <td width="1200" >
                         <asp:ContentPlaceHolder ID="ContentPlaceHolder2" runat="server" >
             </asp:ContentPlaceHolder>
                     </td>
